# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.913 2009-06-30 11:02:41 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta5 (2009/07/??)
 - (2009/06/30) Fixed bug# 3934 - Error mesage on email processing - without
    any effect.

2.4.0 beta4 (2009/06/30)
 - (2009/06/29) Fixed bug# 3933 - Kernel::System::LinkObject should be usable
    in rpc.pl.
 - (2009/06/20) Updated nb_NO translation - Thanks to Fredrik Andersen!
 - (2009/06/29) Added Latvian translation. Thanks to Ivars Strazdins!
 - (2009/06/25) Fixed bug# 3911 - Not all Dashboard Functions e. g. charts
    available in Internet Explorer 6.
 - (2009/06/25) Fixed bug# 3925 - Frontend::NavBarModule in agent navigation
    bar "Ticket::TicketSearchFulltext" and "Ticket::TicketSearchProfile" not
    working together.
 - (2009/06/25) Fixed bug# 3924 - Upcoming Events -> wrong displayed Escalation
    time.
 - (2009/06/25) Fixed bug# 3917 - Dashboard will crash when no Internet
    connection available - Module: ProductNotify.
 - (2009/06/25) Fixed bug# 3913 - Missing Modules in 2.4.0 beta1-beta3:
    Kernel/Output/HTML/ServicePreferencesGeneric.pm and
    Kernel/Output/HTML/SLAPreferencesGeneric.pm.
 - (2009/06/24) Fixed bug# 3826 - In auto responses and agent notifications,
    WYSIWYG is not working.
 - (2009/06/24) Fixed bug# 3796 - Admin notification edit screen is not coming
    proper in WYSIWYG editor.
 - (2009/06/22) Added PasswordMaxLoginFailed as password preferences to define
    max login till user get gets disabled (invalid-temporarily). Feature
    provided by Torsten Thau.
 - (2009/06/22) Fixed bug# 3775 - Translation error in Kernel/Language/de.pm.
 - (2009/06/22) Fixed bug# 3879 - Typing mistakes in the notification texts