@@ -2,7 +2,7 @@
 # AgentTicketOverviewSmall.dtl - html for ticket overview table
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketOverviewSmall.dtl,v 1.15 2009-03-02 23:58:12 martin Exp $
+# $Id: AgentTicketOverviewSmall.dtl,v 1.16 2009-07-01 19:18:21 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,7 +10,7 @@
 # --
 <script language="JavaScript" type="text/javascript">
 function select_items (Type) {
-    for (var i = 0; i < document.matrix.elements[Type].length; i++) {
+    for (var i = 1; i < document.matrix.elements[Type].length; i++) {
         if ( document.matrix.Check.checked ) {
             document.matrix.elements[Type][i].checked = true;
         }
@@ -37,6 +37,7 @@ function select_item_check () {
 <!-- start form -->
 <form action="$Env{"CGIHandle"}" method="post" enctype="multipart/form-data" name="matrix">
   <input type="hidden" name="Action" value="AgentTicketBulk"/>
+  <input type="hidden" name="TicketID" value=""/>
   <table border="0" width="100%" cellspacing="0" cellpadding="4">
     <tr>
       <td class="mainbody">
